--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html(ng-app="myApp")
     meta(charset='utf8')
     base(href='/')
     title Angular Express Seed App
-    link(rel='stylesheet', href='/css/app.css')
+    link(rel='stylesheet', href='https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css')
+
   body
     block body
