--- a/views/partials/addPost.jade
+++ b/views/partials/addPost.jade
@@ -2,6 +2,8 @@ h2 Write a new post
 label(for='title') Title: 
 input(ng-model='form.title', name='title')
 p Body:
-textarea(ng-model='form.text', cols='50', rows='15')
+form(role='form')
+  div.form-group
+    textarea.form-control(ng-model='form.text', cols='50', rows='15')
 p
-  button(ng-click='submitPost()') Submit Post
+  button.btn-success(ng-click='submitPost()') Submit Post
