--- a/views/partials/editPost.jade
+++ b/views/partials/editPost.jade
@@ -2,6 +2,9 @@ h2 Edit post
 label(for='title') Title: 
 input(ng-model='form.title', name='title')
 p Body:
-textarea(ng-model='form.text', cols='50', rows='15')
+form(role='form')
+  div.form-group
+    textarea.form-control(ng-model='form.text', cols='50', rows='15')
+
 p
-  button(ng-click='editPost()') Edit Post
+  button.btn.btn-success(ng-click='editPost()') Edit Post
