--- a/views/partials/signin.jade
+++ b/views/partials/signin.jade
@@ -1,17 +1,19 @@
-h1 用户登录
-form#signin(method="post",accept-charset="utf-8")
-    div(ng-show="error") 用户名或者密码错误
-    div.field
-        lable(for="username") 用户名
-        input#username(type="text",ng-model='form.username',name="username")
-        span.error
-
-    div.field
-        lable(for="password") 密码
-        input#password(type="text",ng-model='form.password',name="password")
-        span.error
-    div.field
-        input#reset(type="reset",value="重置")
-        input#submit(type="submit",ng-click='submitPost()',value="提交")
-        a(href="/signup")
-            input(type="button",value="注册")
+fieldset
+    legend 用户登入
+    form#signin(method="post",accept-charset="utf-8")
+        div(ng-show="error") 用户名或者密码错误
+        div.field.control-group
+            lable.control-label(for="username") 用户名
+            div.controls
+                input#username(type="text",ng-model='form.username',name="username")
+                span.error
+        div.field.control-group
+            lable.control-label(for="password") 密码
+            div.controls
+                input#password(type="text",ng-model='form.password',name="password")
+                span.error
+        div.field.form-actions
+            input#reset.btn.btn-primary(type="reset",value="重置")
+            input#submit.btn.btn-primary(type="submit",ng-click='submitPost()',value="提交")
+            a(href="/signup")
+                input.btn.btn-primary(type="button",value="注册")
