--- a/views/partials/signin.jade
+++ b/views/partials/signin.jade
@@ -13,6 +13,7 @@ fieldset
                 input#password.form-control(type="text",ng-model='form.password',name="password")
                 span.error
         div.field.form-actions.form-group
-            input#reset.btn.btn-primary.col-md-1(type="reset",value="重置")
-            input#submit.btn.btn-primary.col-md-1(type="submit",ng-click='submitPost()',value="提交")
-            a.btn.btn-primary.col-md-1(href="/signup") 注册
+            input#reset.btn.btn-default.btn-primary.col-md-1(type="reset",value="重置")
+            input#submit.btn.btn-default.btn-primary.col-md-1(type="submit",ng-click='submitPost()',value="提交")
+            a.btn.btn-default.btn-primary.col-md-1(href="/signup") 注册
+    
