--- a/views/partials/signup.jade
+++ b/views/partials/signup.jade
@@ -1,5 +1,5 @@
 fieldset
-	legend 注册
+	legend 用户注册
 	form#signup.form-horizontal(method="post",accept-charset="utf-8")
 		div(ng-show="error") 用户信息重复
 		div.field.form-group
