--- a/views/index.jade
+++ b/views/index.jade
@@ -1,22 +1,25 @@
 extends layout
 
 block body
-  nav.navbar.navbar-default
-    .container
-      .navbar-header
-        a.navbar-brand(ng-href='／') Myblog
-      .navbar-collapse.collapse
-        ul.nav.navbar-nav
-          li.active
-            a(ng-href='/signin') 登录
-          li
-            a(ng-href='/signup') 注册
-          li
-            a(ng-href='/signout') 登出
-          li
-            a(ng-href='/addPost') 添加文章
-  div.container
-    div(ng-view)
+  div(ng-controller='mainCtrl')
+    nav.navbar.navbar-default
+      .container
+        .navbar-header
+          a.navbar-brand(ng-href='／') Myblog
+        .navbar-collapse.collapse
+          ul.nav.navbar-nav
+            li.active(ng-show='showAuth()')
+              a(ng-href='/signin') {{currentUser.name}}
+            li.active(ng-show='!showAuth()')
+              a(ng-href='/signin') 登录
+            li
+              a(ng-href='/signup') 注册
+            li(ng-show='showAuth()')
+              a(ng-href='/signout') 登出
+            li(ng-show='showAuth()')
+              a(ng-href='/addPost') 添加文章
+
+    div(ng-view).myContainer
   script(src='javascripts/lib/angular/angular.js')
   script(src='javascripts/app.js')
   script(src='javascripts/services.js')
